#

SUBDIRS = man src
EXTRA_DIST = lnl.spec install.sh install-xlnl-mac.sh \
	README-DOS README-MAC \
	sh/all-prot sh/amenu-prot sh/chr-prot sh/curs-prot sh/cv-acce \
	sh/cv-anthology sh/cv-armor sh/cv-class-dflt sh/cv-coin \
	sh/cv-food sh/cv-inst sh/cv-item sh/cv-light sh/cv-pipe \
	sh/cv-potion sh/cv-range sh/cv-rare-goods sh/cv-scroll \
	sh/cv-spell sh/cv-stick sh/cv-tab.awk sh/cv-tobacco sh/cv-wpn \
	sh/draw-prot sh/dun-prot sh/fight-prot sh/fx-prot sh/gfile-prot \
	sh/gmain-prot sh/item-prot sh/main-unix-prot sh/make-change-log \
	sh/make-rpm sh/menu-prot sh/misc-prot sh/mnstr-act-prot \
	sh/mnstr-prot sh/msg-prot sh/party-prot sh/pet-prot sh/play-rep-prot \
	sh/prot \
	sh/rcv-acce sh/rcv-anthology sh/rcv-armor sh/rcv-class-dflt \
	sh/rcv-coin sh/rcv-food sh/rcv-gen-spell sh/rcv-inst sh/rcv-item \
	sh/rcv-light sh/rcv-mnstr sh/rcv-pipe sh/rcv-potion sh/rcv-range \
	sh/rcv-rare-goods sh/rcv-scroll sh/rcv-spell sh/rcv-stick \
	sh/rcv-tab.awk sh/rcv-tobacco sh/rcv-wpn \
	sh/replay-prot sh/request-prot \
	sh/scp-web sh/scp-web-img sh/scp-web-misc sh/spell-prot \
	sh/tmenu-prot sh/town-prot sh/trap-prot sh/turn-prot \
	play-lnl/lnl-english play-lnl/lnl-english-mono \
	play-lnl/lnl-eucjp play-lnl/lnl-eucjp-mono \
	play-lnl/lnl-utf-8 play-lnl/lnl-utf-8-mono
